CSS Nesting (I): lexical-level parsing